--- a/RH/gerenciamento-funcionarios/style.css
+++ b/RH/gerenciamento-funcionarios/style.css
@@ -312,7 +312,7 @@ button {
   color: white;
   border: none;
   border-radius: 20px;
-  width: 170px;
+  width: 140px;
   height: 40px;
   display: flex;
   align-items: center;
@@ -322,6 +322,9 @@ button {
   margin-left: 30px;
 }
 
+.prosseguir {
+  color: white;
+}
 
 
 
@@ -466,5 +469,4 @@ h2 {
 #atualizar {
   margin-top: 20px;
 }
-
 
